infrastructure/argocd/ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.example.com`)
      priority: 10
      services:
        - kind: Service
          name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.example.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - kind: Service
          name: argocd-server
          port: 80
          scheme: h2c
